--- a/src/assets/sass/all.sass
+++ b/src/assets/sass/all.sass
@@ -23,6 +23,9 @@
 @import '/welcomeHD/welcomeHD__title.sass'
 @import './welcomeHD/welcomeHD__description.sass'
 
+// horizontal-line
+@import './horizontal-line/horizontal-line.sass'
+
 // stage-questions
 @import './stage-questions/stage-questions.sass'
 @import './stage-questions/segment.sass'
@@ -69,7 +72,26 @@
 @import './atom/atom__three.sass'
 @import './atom/atom__nucleus.sass'
 
+// stage-bodygraph
+@import './stage-bodygraph/stage-bodygraph.sass'
+@import './stage-bodygraph/stage-bodygraph__title.sass'
 
 // bodygraph
 @import './bodygraph/bodygraph.sass'
+@import './bodygraph/bodygraph__contain.sass'
 @import './bodygraph/bodygraph__rave.sass'
+
+// stage-consultation
+@import './stage-consultation/stage-consultation.sass'
+@import './stage-consultation/stage-consultation__title.sass'
+@import './stage-consultation/stage-consultation__services.sass'
+
+// services
+@import './services/services.sass'
+@import './services/services__block.sass'
+@import './services/services__content.sass'
+@import './services/services__title.sass'
+@import './services/services__icon.sass'
+@import './services/services__price.sass'
+@import './services/services__list.sass'
+@import './services/services__button.sass'
