--- a/src/assets/sass/bodygraph/bodygraph.sass
+++ b/src/assets/sass/bodygraph/bodygraph.sass
@@ -1,6 +1,7 @@
 .bodygraph
   display: flex
   flex-direction: column
+  overflow: hidden
   width: 100%
   height: auto
-  background-color: gray
+  background-color: $white
