--- a/src/assets/sass/bodygraph/bodygraph__rave.sass
+++ b/src/assets/sass/bodygraph/bodygraph__rave.sass
@@ -1,8 +1,8 @@
 .bodygraph__rave
   display: flex
-  border: 2px solid red
+  margin-top: 21px
   width: 100%
-  opacity: 0.95
+  opacity: 0.94
   transform: translateY(-80px)
   position: relative
   z-index: 0
