add accordion and review

--- a/src/assets/sass/all.sass
+++ b/src/assets/sass/all.sass
@@ -95,3 +95,16 @@
 @import './services/services__price.sass'
 @import './services/services__list.sass'
 @import './services/services__button.sass'
+
+// stage-faq
+@import './stage-faq/stage-faq.sass'
+@import './stage-faq/stage-faq__title.sass'
+
+// accordion
+@import './accordion/accordion.sass'
+@import './accordion/accordion__item.sass'
+@import './accordion/accordion__question.sass'
+@import './accordion/accordion__answer.sass'
+@import './accordion/accordion__answer_visible.sass'
+@import './accordion/accordion__arrow.sass'
+@import './accordion/accordion__arrow_rotate.sass'
