--- a/src/assets/sass/accordion/accordion__answer.sass
+++ b/src/assets/sass/accordion/accordion__answer.sass
@@ -3,13 +3,13 @@
   transition: 0.25s
   height: 0
   overflow: hidden
-  background-color: #FFD5D5
+  background-color: $red
   font-weight: 500
   margin: 0
 
   p
     font-size: 1.3rem
     font-weight: 500
-    padding: 15px
+    padding: 20px
     padding-top: 0
     text-indent: 30px
