--- a/src/assets/sass/all.sass
+++ b/src/assets/sass/all.sass
@@ -12,7 +12,12 @@
 @import './header/__logo/header__logo.sass'
 @import './header/__logo/header__logo_rotating.sass'
 @import './header/header__menu.sass'
-@import './header/__buttons/header__buttons.sass'
+
+// navigationButtons
+@import './navigationButtons/navigationButtons.sass'
+@import './navigationButtons/navigationButtons__href.sass'
+@import './navigationButtons/navigationButtons__underLine.sass'
+@import './navigationButtons/navigationButtons__underLine_visible.sass'
 
 // content
 @import './content/content.sass'
@@ -108,3 +113,9 @@
 @import './accordion/accordion__answer_visible.sass'
 @import './accordion/accordion__arrow.sass'
 @import './accordion/accordion__arrow_rotate.sass'
+
+// footer
+@import './footer/footer.sass'
+
+// nametag
+@import './nametag/nametag.sass'
