--- a/src/assets/sass/services/services__content.sass
+++ b/src/assets/sass/services/services__content.sass
@@ -2,9 +2,8 @@
   display: flex
   flex-direction: column
   align-items: center
-  //border: 2px solid red
   width: 90%
   height: 100%
   border-radius: 2px
   padding: 10px
-  background-color: #ffd5d5
+  background-color: $red
