--- a/src/assets/sass/all.sass
+++ b/src/assets/sass/all.sass
@@ -2,6 +2,7 @@
 @import './global/fonts.sass'
 @import './global/variables.sass'
 @import './global/main.sass'
+@import './global/mediaQueries.sass'
 
 // wrapper
 @import './wrapper/wrapper.sass'
@@ -13,11 +14,20 @@
 @import './header/__logo/header__logo_rotating.sass'
 @import './header/header__menu.sass'
 
-// navigationButtons
-@import './navigationButtons/navigationButtons.sass'
-@import './navigationButtons/navigationButtons__href.sass'
-@import './navigationButtons/navigationButtons__underLine.sass'
-@import './navigationButtons/navigationButtons__underLine_visible.sass'
+// burger-menu
+@import './burger-menu/burger-menu.sass'
+@import './burger-menu/burger-menu__switcher.sass'
+@import './burger-menu/burger-menu__content.sass'
+@import './burger-menu/_open/burger-menu__switcher_open.sass'
+@import './burger-menu/_open/burger-menu__content_open.sass'
+@import './burger-menu/burger-menu__button.sass'
+
+// nav-menu
+@import './nav-menu/nav-menu.sass'
+@import './nav-menu/nav-menu__button.sass'
+@import './nav-menu/nav-menu__href.sass'
+@import './nav-menu/nav-menu__underLine.sass'
+@import './nav-menu/nav-menu__underLine_visible.sass'
 
 // content
 @import './content/content.sass'
@@ -116,6 +126,14 @@
 
 // footer
 @import './footer/footer.sass'
+
+// contacts
+@import './contacts/contacts.sass'
+@import './contacts/contacts__title.sass'
+@import './contacts/contacts__item.sass'
+
+// socials
+@import './socials/socials.sass'
 
 // nametag
 @import './nametag/nametag.sass'
