--- a/src/assets/sass/services/services__button.sass
+++ b/src/assets/sass/services/services__button.sass
@@ -8,13 +8,12 @@
   width: 160px
   min-height: 50px
   background-color: #000
-  display: flex
   text-transform: uppercase
   letter-spacing: 0.15rem
   white-space: nowrap
   transition: .2s
-  margin-top: 20px
-  margin-bottom: 10px
+  margin-top: auto
+  margin-bottom: 20px
   
   &:hover
     color: #868686
