--- a/src/assets/sass/stage-bodygraph/stage-bodygraph__title.sass
+++ b/src/assets/sass/stage-bodygraph/stage-bodygraph__title.sass
@@ -1,6 +1,7 @@
 .stage-bodygraph__title
   display: flex
   justify-content: center
+  text-align: center
   font-size: 3rem
   font-weight: 550
   text-transform: uppercase
