--- a/src/assets/sass/wrapper/wrapper.sass
+++ b/src/assets/sass/wrapper/wrapper.sass
@@ -1,5 +1,6 @@
 .wrapper
   display: flex
   flex-direction: column
-  height: 3000px
+  height: auto
   background-color: $white
+  overflow: hidden
