--- a/src/assets/sass/burger-menu/burger-menu__button.sass
+++ b/src/assets/sass/burger-menu/burger-menu__button.sass
@@ -1,9 +1,11 @@
-.navigationButtons
+.burger-menu__button
   display: flex
   flex-direction: column
-  width: 90px
+  width: 60%
+  font-size: 1rem
+  font-weight: 500
   align-items: center
   height: 50px
   box-shadow: 0 0 10px #000000
   justify-content: center
-  margin-right: 15px
+  margin-top: 15px
