--- a/src/assets/sass/all.sass
+++ b/src/assets/sass/all.sass
@@ -13,6 +13,7 @@
 @import './header/__logo/header__logo.sass'
 @import './header/__logo/header__logo_rotating.sass'
 @import './header/header__menu.sass'
+@import './header/header__container.sass'
 
 // burger-menu
 @import './burger-menu/burger-menu.sass'
@@ -31,12 +32,15 @@
 
 // content
 @import './content/content.sass'
+@import './content/container.sass'
 
 // welcomeHD
 @import '/welcomeHD/welcomeHD.sass'
 @import './welcomeHD/welcomeHD__miniTitle.sass'
 @import '/welcomeHD/welcomeHD__title.sass'
 @import './welcomeHD/welcomeHD__description.sass'
+@import './welcomeHD/_max/welcomeHD__title_max.sass'
+@import './welcomeHD/_max/welcomeHD__description_max.sass'
 
 // horizontal-line
 @import './horizontal-line/horizontal-line.sass'
@@ -126,6 +130,10 @@
 
 // footer
 @import './footer/footer.sass'
+@import './footer/footer__media.sass'
+@import './footer/footer__agree.sass'
+@import './footer/footer__agreeItem.sass'
+@import './footer/footer__container.sass'
 
 // contacts
 @import './contacts/contacts.sass'
@@ -137,3 +145,7 @@
 
 // nametag
 @import './nametag/nametag.sass'
+
+// policy
+@import './policy/policy.sass'
+@import './policy/policy__art.sass'
