--- a/src/assets/sass/global/mediaQueries.sass
+++ b/src/assets/sass/global/mediaQueries.sass
@@ -20,6 +20,9 @@
   .welcomeHD__description
     width: 75% !important
 
+  .welcomeHD__title_max
+    font-size: 2.8rem !important
+
   .burger-menu__content
     left: 50px !important
     width: 250px !important
@@ -75,6 +78,9 @@
   .welcomeHD
     margin-top: 50px !important
 
+  .welcomeHD__title_max
+    font-size: 2.2rem !important
+
   .stage-questions
     margin-top: 80px !important
 
@@ -109,6 +115,9 @@
 
   .welcomeHD__description
     width: 85% !important
+
+  .welcomeHD__title_max
+    font-size: 1.9rem !important
 
   .main-block__mainTitle
     font-size: 2.6rem !important
@@ -147,7 +156,10 @@
 
   .contacts
     flex: 2
-    margin-left: 15px !important
+    margin-left: -15px !important
+
+  .footer__agree
+    width: 90% !important
 
 @media screen and (max-width: 345px)
   .header__logo
@@ -158,6 +170,9 @@
 
   .welcomeHD__title
     font-size: 2.3rem !important
+
+  .welcomeHD__title_max
+    font-size: 1.5rem !important
 
   .main-block__mainTitle
     font-size: 2.4rem !important
@@ -187,4 +202,4 @@
 
   .contacts
     flex: 1.5 !important
-    margin-left: 10px !important
+    margin-left: -25px !important
