--- a/src/assets/sass/footer/footer.sass
+++ b/src/assets/sass/footer/footer.sass
@@ -1,6 +1,8 @@
 .footer
   display: flex
+  width: 100%
+  flex-direction: column
+  align-items: center
   background-color: $black
   margin-top: 100px
-  min-height: 175px
-  max-height: 175px
+  height: auto
