--- a/src/assets/sass/header/header.sass
+++ b/src/assets/sass/header/header.sass
@@ -1,9 +1,9 @@
 .header
   display: flex
+  justify-content: center
   margin: 0
   width: 100%
   height: 100px
-  //border: 1px solid red
   color: black
   background-color: $black
   position: relative
