--- a/src/assets/sass/global/mediaQueries.sass
+++ b/src/assets/sass/global/mediaQueries.sass
@@ -1,4 +1,4 @@
-@media screen and (max-width: 975px)
+@media screen and (max-width: 1060px)
   .nav-menu
     display: none !important
 
@@ -103,6 +103,19 @@
 
   .socials
     margin-right: 15px !important
+
+  .swiper-container
+    width: 400px !important
+
+  .swiper-wrapper
+    width: 400px !important
+
+  .swiper-slide
+    width: 400px !important
+
+  .videoIframe
+    width: 400px !important
+
 @media screen and (max-width: 420px)
   html
     font-size: 13px
@@ -160,6 +173,18 @@
 
   .footer__agree
     width: 90% !important
+
+  .swiper-container
+    width: 300px !important
+
+  .swiper-wrapper
+    width: 300px !important
+
+  .swiper-slide
+    width: 300px !important
+
+  .videoIframe
+    width: 300px !important
 
 @media screen and (max-width: 345px)
   .header__logo
