--- a/src/assets/sass/all.sass
+++ b/src/assets/sass/all.sass
@@ -100,6 +100,10 @@
 @import './bodygraph/bodygraph__contain.sass'
 @import './bodygraph/bodygraph__rave.sass'
 
+// stage-review
+@import './stage-review/stage-review.sass'
+@import './stage-review/stage-review__container.sass'
+
 // stage-consultation
 @import './stage-consultation/stage-consultation.sass'
 @import './stage-consultation/stage-consultation__title.sass'
