--- a/src/assets/sass/all.sass
+++ b/src/assets/sass/all.sass
@@ -104,6 +104,10 @@
 @import './stage-review/stage-review.sass'
 @import './stage-review/stage-review__container.sass'
 
+// loader
+@import './loader/loader-wrapper.sass'
+@import './loader/loader.sass'
+
 // stage-consultation
 @import './stage-consultation/stage-consultation.sass'
 @import './stage-consultation/stage-consultation__title.sass'
@@ -153,3 +157,4 @@
 // policy
 @import './policy/policy.sass'
 @import './policy/policy__art.sass'
+
